Finite powers via exponentiation by squaring

--- a/doc/ordinals.tex
+++ b/doc/ordinals.tex
@@ -249,7 +249,7 @@ In the limit case, we get
 \end{align*}
 
 \subsection{Exponentiation}
-Exponentiation with base $\omega$ is easy. For any $\beta$ in CNF, $\omega^\beta$ is already in CNF. Exponentiation with arbitrary base is more complicated. Let
+Exponentiation with base $\omega$ is easy. For any $\beta$ in CNF, $\omega^\beta$ is already in CNF. Exponentiation with arbitrary base is more complicated. Let again
 
 \[ \alpha = \omega^{\beta_1}c_1 + \ldots + \omega^{\beta_n}c_n \]
 
